--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -1903,6 +1903,76 @@ data:
               sort:
                 method: state
                 numeric: true
+  security.yaml: |
+    views:
+      - title: Home
+        sections:
+          - type: grid
+            cards:
+              - type: heading
+                heading: Camera Controls
+                heading_style: title
+                icon: mdi:camera-lock
+              - type: entities
+                entities:
+                  - switch.bedroom_privacy_mode
+                  - switch.living_room_privacy_mode
+          - type: grid
+            cards:
+              - type: heading
+                heading: Camera Feeds
+                heading_style: title
+                icon: mdi:camera
+              - type: grid
+                square: false
+                columns: 1
+                cards:
+                  - type: picture-entity
+                    entity: camera.bedroom_fluent
+                  - type: picture-entity
+                    entity: camera.living_room_fluent
+    
+          - type: grid
+            cards:
+              - type: heading
+                heading: Latest Human Detection
+                heading_style: title
+                icon: mdi:account-alert
+              - type: conditional
+                conditions:
+                  - entity: input_text.intruder_image_location
+                    state_not: ""
+                  - entity: input_text.intruder_image_location
+                    state_not: "unknown"
+                card:
+                  type: markdown
+                  content: >
+                    {% set loc = states('input_text.intruder_image_location') %}
+                    {% set ts = states('input_text.intruder_image_timestamp') %}
+                    ![Intruder](/local/intruders/{{ loc }}_{{ ts }}.jpg)
+                    
+                    **Location:** {{ loc | replace('_', ' ') | title }}
+                    **Time:** {{ strptime(ts, '%Y%m%d_%H%M%S').strftime('%-I:%M %p on %b %d') if ts and ts not in ['unknown', 'unavailable'] else 'Unknown' }}
+    
+          - type: grid
+            cards:
+              - type: heading
+                heading: Events
+                heading_style: title
+                icon: mdi:walk
+              - type: entities
+                entities:
+                  - binary_sensor.bedroom_animal
+                  - binary_sensor.living_room_animal
+              - type: entities
+                entities:
+                  - binary_sensor.bedroom_person
+                  - binary_sensor.living_room_person
+        header:
+          card:
+            type: markdown
+            text_only: true
+            content: '# Security'
   light_control.yaml: |
     views:
       - title: Light Control
