--- a/gitops/apps/home-assistant/configuration/automations/pet_water_fountain_alert.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/pet_water_fountain_alert.yaml
@@ -11,6 +11,22 @@ triggers:
     to: "off"
     for:
       minutes: 5
+  # Fallback: Run on startup to catch if it was already off
+  - trigger: homeassistant
+    event: start
+conditions:
+  - condition: or
+    conditions:
+      - condition: state
+        entity_id: binary_sensor.eversweet_solo_2_water_level
+        state: "off"
+        for:
+          minutes: 5
+      - condition: state
+        entity_id: switch.eversweet_solo_2_power
+        state: "off"
+        for:
+          minutes: 5
 actions:
   - action: notify.mobile_app_pixel_9_pro_xl
     data:
