--- a/gitops/apps/home-assistant/configuration/dashboards/security.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/security.yaml
@@ -32,49 +32,33 @@ views:
             heading: Latest Human Detection
             heading_style: title
             icon: mdi:account-alert
-          - type: conditional
-            conditions:
-              - entity: input_text.intruder_image_location
-                state_not: ""
-              - entity: input_text.intruder_image_location
-                state_not: "unknown"
-            card:
-              type: markdown
-              content: >
-                {% set loc = states('input_text.intruder_image_location') %}
-                {% set ts = states('input_text.intruder_image_timestamp') %}
+          - type: markdown
+            content: >
+              {% set loc = states('input_text.intruder_image_location') %}
+              {% set ts = states('input_text.intruder_image_timestamp') %}
+              {% if loc and loc not in ['unknown', 'unavailable', ''] %}
                 ![Intruder](/local/intruders/{{ loc }}_{{ ts }}.jpg)
                 
                 **Location:** {{ loc | replace('_', ' ') | title }}
                 **Time:** {{ strptime(ts, '%Y%m%d_%H%M%S').strftime('%-I:%M %p on %b %d') if ts and ts not in ['unknown', 'unavailable'] else 'Unknown' }}
+              {% else %}
+                No intruder detected.
+              {% endif %}
 
-      - type: conditional
-        conditions:
-          - condition: or
-            conditions:
-              - entity: binary_sensor.bedroom_animal
-                state_not: "unavailable"
-              - entity: binary_sensor.living_room_animal
-                state_not: "unavailable"
-              - entity: binary_sensor.bedroom_person
-                state_not: "unavailable"
-              - entity: binary_sensor.living_room_person
-                state_not: "unavailable"
-        card:
-          type: grid
-          cards:
-            - type: heading
-              heading: Events
-              heading_style: title
-              icon: mdi:walk
-            - type: entities
-              entities:
-                - binary_sensor.bedroom_animal
-                - binary_sensor.living_room_animal
-            - type: entities
-              entities:
-                - binary_sensor.bedroom_person
-                - binary_sensor.living_room_person
+      - type: grid
+        cards:
+          - type: heading
+            heading: Events
+            heading_style: title
+            icon: mdi:walk
+          - type: entities
+            entities:
+              - binary_sensor.bedroom_animal
+              - binary_sensor.living_room_animal
+          - type: entities
+            entities:
+              - binary_sensor.bedroom_person
+              - binary_sensor.living_room_person
     header:
       card:
         type: markdown
