--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -123,16 +123,16 @@ data:
                     tap_action:
                       action: toggle
     
-          - type: entities
-            title: Advanced Settings
-            show_header_toggle: false
-            entities:
-              - entity: select.eversweet_solo_2_light_brightness
-                name: LED Brightness
-              - entity: select.eversweet_solo_2_mode
-                name: Operating Mode
-              - entity: switch.eversweet_solo_2_power
-                name: Power Switch
+    #      - type: entities
+    #        title: Advanced Settings
+    #        show_header_toggle: false
+    #        entities:
+    #          - entity: select.eversweet_solo_2_light_brightness
+    #            name: LED Brightness
+    #          - entity: select.eversweet_solo_2_mode
+    #            name: Operating Mode
+    #          - entity: switch.eversweet_solo_2_power
+    #            name: Power Switch
   room_schedule_configuration.yaml: |
     views:
       - title: Room Schedule Configuration
